syntax = "proto3";

// protoc --java_out=src/main/java src/main/java/com/ljh/gamedemo/proto/Creep.proto

option java_package = "com.ljh.gamedemo.proto.protoc";
option java_outer_classname = "CreepProto";

message Creep{

    int64 id = 1;
    int64 creepId = 2;
    int32 type = 3;
    string name = 4;
    int32 num = 5;
    int32 level = 6;
    int32 hp = 7;
    int32 damage = 8;
    int32 maxHp = 9;
}